# hwpx-filler

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  build.ps1  conftest.py  package-installer.ps1  pyproject.toml  run-diff.ps1  run-filler.ps1  test.ps1
.claude/workflows/: feature.js
.github/workflows/: quality.yml  release-diff.yml  release.yml
docs/: ARCH_UI_SEPARATION.md  COPY_STYLE_GUIDE.md  DESIGN_LANGUAGE.md  DEVELOPMENT_ENVIRONMENT.md  JOB_BROWSER_DESIGN.md  KORDOC_COMPARISON.md  MILESTONE_I_DIRECT_MANIPULATION_DECISION.md  MILESTONE_I_FORGIVENESS_DECISION.md  MILESTONE_I_PERSONALIZATION_DECISION.md  PROCESS_TOPOLOGY.md  README.md  REVIEW_LEDGER.md  REVIEW_ORCHESTRATOR.md  REVIEW_ROUND1_FINDINGS.md  REVIEW_STD_FINDINGS.md  REVIEW_STD_ORCHESTRATOR.md  REVIEW_UI_FINDINGS.md  REVIEW_UI_ORCHESTRATOR.md  ROADMAP.md  R_FLOW_JOB_SESSION.md  R_INFO_JOB_HOME.md  SHELL_DESIGN.md  TEST_PORTFOLIO_AUDIT.md  TEST_PORTFOLIO_MATRIX.md  UI_CONTRACT.md  UI_DESIGN_DECISIONS.md  UI_DESIGN_HANDOFF.md  UI_GALLERY.html  UI_PROTOTYPE_APPB.html  UI_VOCABULARY.md  UNIVCONTRACTOR_LESSONS.md  UX_FINDINGS_101_WALKTHROUGH.md  WEB_RENDER_PRESERVATION.md  WORK_UNITS.md  design_language_hue.html  design_language_rail.html  design_language_screens.html  package_coverage_floors.toml  test_portfolio_classification.toml  test_portfolio_inventory.csv  (+1 more)
docs/archive/: UI_CONTRACT_QT.md
docs/r-flow-mockups/: block3-verb-n-demo.html  block4-filter-crystallize-demo.html  block4-main-guard-continuity-demo.html  block5-quick-draft-demo.html  block6-d1-d2-compare-demo.html  block6-succession-checklist.md  chip-live-demo.html  r-flow-editor-wizard.html
docs/r-info-mockups/: draft-density-candidates.html  r-info-2bu-template-library.html  r-info-3bu-draft-screen.html  r-info-job-screen-v8.html  r-info-job-screen.html  r-info-job-twomode.html
examples/quickstart-101/: .gitignore  PATTERNS.md  README.md  make_template.py  reset-101.cmd  start-101.cmd
examples/quickstart-101/data/: 발주목록.csv  발주목록_2.csv
examples/quickstart-101/templates/: 구매요청서.hwpx  발주요청서.hwpx
examples/quickstart-101/text_data/: 발주_샘플.csv
packaging/: README.md  build.ps1  hwpx_cli.spec  hwpx_cli_entry.py  hwpx_diff.spec  hwpx_diff_entry.py  hwpx_diff_version.txt  hwpx_filler.spec  hwpx_filler_entry.py  hwpx_filler_version.txt  hwpx_filler_web.spec  hwpx_filler_web_entry.py  make_filler_icon.py  make_icon.py  verify_specs.py
packaging/installers/: hwpx-diff.iss  hwpx-filler.iss
scripts/: audit_test_portfolio.py  build_nara_testset.py  capture_101_screenshots.py  check_package_coverage.py  check_release_version.py  gen_design_tokens.py  gen_scenario_fixtures.py  generate_build_metadata.py  render_document_narmi_branding.py
src/hwpxcore/: __init__.py  atomic.py  lineseg.py  motw.py  package.py  text_extract.py
src/hwpxdiff/: __init__.py  __main__.py  app.py  cli.py  diff.py  style.py
src/hwpxfiller/: __init__.py  batch.py  cli.py  naming.py
tests/: conftest.py  test_architecture.py  test_atomic.py  test_audit_test_portfolio.py  test_authoring.py  test_batch_gate.py  test_batch_run.py  test_boot_budget.py  test_branding.py  test_cli.py  test_compile_badge.py  test_confirm.py  test_contrast_wcag.py  test_core_paths.py  test_corpus_golden.py  test_danger_confirm_contract.py  test_data_factory.py  test_dataset_pool.py  test_dataset_pool_state.py  test_dataset_pool_view.py  test_design_tokens.py  test_diff_cli.py  test_diff_complex_structures.py  test_diff_controller.py  test_diff_empty_gate.py  test_diff_golden.py  test_diff_invariants.py  test_diff_render.py  test_diff_renumber.py  test_diff_rows.py  test_diff_synthetic.py  test_diff_web_selftest_gate.py  test_direct_manipulation_decision.py  test_dispatch_wiring.py  test_engine.py  test_excel_contract.py  test_extract_invariants.py  test_extract_synthetic.py  test_fields.py  test_file_filters.py  (+95 more)
tests/fixtures/: multi_sheet.xlsx  nara_items_item_response.json  nara_std_record.json  nara_std_response.json
ui-feedback/: UI-0F6B2273-A.json  UI-0F6B2273-B.json  UI-10F2FF98-A.json  UI-10F2FF98-B.json  UI-10F2FF98-C.json  UI-10F2FF98-D.json  UI-10F2FF98-E.json  UI-1A916593-A.json  UI-1A916593-B.json  UI-1EC14BA1.json  UI-31A5A484-A.json  UI-31A5A484-B.json  UI-31A5A484-C.json  UI-3E7A91C4.json  UI-433A6E14.json  UI-4B32B5D8.json  UI-4D9B7C14.json  UI-59C00F1C.json  UI-5C4F0A11.json  UI-61C7ADF8.json  UI-78F27CA7.json  UI-7E4C2B91.json  UI-83D8BBD0-A.json  UI-83D8BBD0-B.json  UI-83D8BBD0-C.json  UI-83D8BBD0-D.json  UI-8609E239.json  UI-98DDFE96.json  UI-9B2AB35D-A.json  UI-9B2AB35D-B.json  UI-A6368A20-A.json  UI-A6368A20-B.json  UI-A6368A20-C.json  UI-A6368A20-D.json  UI-A6368A20-E.json  UI-A6368A20-F.json  UI-A6368A20-G.json  UI-AD966C89-A.json  UI-AD966C89-B.json  UI-C08AD62D.json  (+8 more)
web/: index.html
web-diff/: index.html
web-diff/css/: app.css  tokens.css
web-diff/js/: app.js  bridge.js
web/css/: app.css  tokens.css
web/js/: app.js  bridge.js  copy.js  datazone.js  draftsession.js  editor_entry.js  esc.js  grouplist.js  guard.js  modal.js  pathtrack.js  personalization.js  pool_picker.js  popover.js  preserve.js  relink.js  segview.js  sheet_picker.js  surface_sheet.js  theme.js  undo_toast.js
(+153 files in other folders)
