[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwpx-tools"
version = "0.1.0"
description = "HWPX 도구 모음 — 공통 파서(hwpxcore) 위의 두 제품: 개정 비교(hwpxdiff)·누름틀 주입(hwpxfiller)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "lxml>=5.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
# 웹 프론트엔드(pywebview) 마이그레이션 중 PySide6 와 병존 — 마지막 화면 이관 후에만 Qt 제거
# 검토(에픽 #20). pywebview 는 Windows=EdgeChromium(WebView2) 백엔드 핀; 6.x 계열 고정.
gui = ["PySide6>=6.6", "pywebview>=6.2,<7"]
dev = ["pytest>=8.0"]
package = ["pyinstaller>=6.21"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]
build = [
    "pyinstaller>=6.21",
]

[project.scripts]
hwpxfiller = "hwpxfiller.cli:main"
hwpxdiff = "hwpxdiff.cli:main"

[project.gui-scripts]
hwpx-filler = "hwpxfiller.gui.app:main"
hwpx-filler-web = "hwpxfiller.webapp.app:main"
# diff 웹 진입점(#22). 구 Qt 진입점(hwpx-diff)은 단계 B(PySide6 제거)까지 병존.
hwpx-diff = "hwpxdiff.app:main"
hwpx-diff-web = "hwpxdiff.webapp.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hwpxcore", "src/hwpxdiff", "src/hwpxfiller"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["hwpxcore", "hwpxdiff", "hwpxfiller"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "B"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["build", "dist"]
reportArgumentType = "none"
reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportOptionalMemberAccess = "none"
