[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwpx-tools"
version = "0.1.1"
description = "HWPX 도구 모음 — 공통 파서(hwpxcore) 위의 두 제품: 개정 비교(hwpxdiff)·누름틀 주입(hwpxfiller)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "lxml>=5.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
# 웹 프론트엔드(pywebview) — 두 제품 모두 Qt 이관 완료(#20·#22·#23)로 PySide6 제거.
# pywebview 는 Windows=EdgeChromium(WebView2) 백엔드 핀; 6.x 계열 고정. extra 이름은
# 러너/빌드 관례(--extra gui) 유지 위해 gui 로 둔다(내용은 pywebview 단일).
gui = ["pywebview>=6.2,<7"]
dev = ["pytest>=8.0"]
package = ["pyinstaller>=6.21"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]
build = [
    "pyinstaller>=6.21",
]

[project.scripts]
hwpxfiller = "hwpxfiller.cli:main"
hwpxdiff = "hwpxdiff.cli:main"

[project.gui-scripts]
# 두 제품 모두 pywebview 웹 진입점만 남는다 — 구 Qt 진입점(hwpx-filler·hwpx-diff)은
# PySide6 제거(#23)로 폐기.
hwpx-filler-web = "hwpxfiller.webapp.app:main"
hwpx-diff-web = "hwpxdiff.webapp.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hwpxcore", "src/hwpxdiff", "src/hwpxfiller"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["hwpxcore", "hwpxdiff", "hwpxfiller"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "B"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["build", "dist"]
reportArgumentType = "none"
reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportOptionalMemberAccess = "none"
